syntax = "proto3";
option csharp_namespace = "N8GrpcPrac";
package greet;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetWeatherForecast (google.protobuf.Empty) returns (WeatherForecast);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The
message WeatherForecast {
  string city = 1;
  google.protobuf.Timestamp date = 2;
  int32 temperatureC = 3;
  int32 temperatureF = 4;
  string summary = 5; 
}
